@@ -1,3 +1,4 @@
+ - Copy all files to ~/.instant/error/module_name when instant fails
  - If environmental variable INSTANT_DISPLAY_COMPILE_LOG is set the content 
    of compile.log will be displayed
  - Removed copying of compile.log to ~/.instant/error/
